--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Ola,estou treinando o basico do git e do github</h1>
-    <p>Estou alterando no github</p>
+    <p>Estou alterando no github e conferindo no vscode</p>
 </body>
 </html>
